# CystCare-AI

./: package-lock.json  package.json
Backend/: Dockerfile  llm.py  main.py  pyproject.toml
Backend/auth/: routes.py
Backend/clinics/: google.py
Backend/data/: Resources_Inventory.csv  Treatment_Costs.csv
Backend/payments/: mpesa.py
Backend/pinecone_db/: ingest.py  query.py
Backend/triaging/: growth_predictor.py  routes.py  treatment_recommender.py
Backend/triaging/models/: growth_model.pkl  treatment_model.pkl
Frontend/: README.md  app.json  package-lock.json  package.json
Frontend/app/(auth)/: _layout.tsx  index.tsx  sign-in.tsx
Frontend/app/(onboarding)/: _layout.tsx  index.tsx
Frontend/app/(patient)/: _layout.tsx  chat.tsx  goals.tsx  index.tsx  profile.tsx  resources.tsx
Frontend/app/(tabs)/: _layout.tsx
Frontend/components/: AIHealthCoach.tsx  AdvancedPredictionEngine.tsx  HelpCenterModal.tsx
Frontend/constants/: Colors.ts
Frontend/contexts/: LanguageContext.tsx
app/: _layout.tsx
app/(auth)/: _layout.tsx
app/(onboarding)/: language-selection.tsx
app/(patient)/: activity.tsx  appointments.tsx  clinics.tsx  index.tsx  prediction.tsx  profile.tsx  treatment-comparison.tsx  treatment.tsx
components/: EmergencyDetectionSystem.tsx  HealthHistoryModal.tsx  PersonalizedTreatmentPlan.tsx  ThemedText.tsx
components/ui/: Switch.tsx
contexts/: AuthContext.tsx  LanguageContext.tsx  ThemeContext.tsx
model_training/: EDA_all_data_sets.ipynb  Ovarian_Cysts.ipynb  Personalized_Treatment_Recommendation_System.ipynb  README.md
(+1 files in other folders)
